Updated href to index.html

--- a/Collections.html
+++ b/Collections.html
@@ -27,7 +27,7 @@
   </h4>
   </ul>
   <hr size=2 noshade color=black>
-  <a href="file:///C:/Users/nmacl/OneDrive/Documents/Web%20Development/HTML%20-%20Personal%20Site/index.html">
+  <a href="index.html">
     <h3>Back To Website</h3>
   </a>
 
