--- a/Collections.html
+++ b/Collections.html
@@ -27,9 +27,7 @@
   </h4>
   </ul>
   <hr size=2 noshade color=black>
-  <a href="index.html">
-    <h3>Back To Website</h3>
-  </a>
+  <a href="index.html">Back To Website</a>
 
 </body>
 
